--- a/libftest_/libft/makefile
+++ b/libftest_/libft/makefile
@@ -40,7 +40,8 @@ SRC		=	ft_atoi.c \
 			ft_putchar_fd.c \
 			ft_putstr_fd.c \
 			ft_putendl_fd.c \
-			ft_putnbr_fd.c
+			ft_putnbr_fd.c \
+			ft_strjoin.c
 
 OBJ		=	$(subst .c,.o,$(SRC))
 CFLAGS	=	-Wall -Werror -Wextra
