--- a/libftest_/libft/makefile
+++ b/libftest_/libft/makefile
@@ -41,8 +41,7 @@ SRC		=	ft_atoi.c \
 			ft_putstr_fd.c \
 			ft_putendl_fd.c \
 			ft_putnbr_fd.c \
-			ft_strjoin.c \
-			ft_split.c
+			ft_strjoin.c 
 
 OBJ		=	$(subst .c,.o,$(SRC))
 CFLAGS	=	-Wall -Werror -Wextra
