+strncopy(not good)

--- a/premier_cercle/printf/Makefile
+++ b/premier_cercle/printf/Makefile
@@ -6,7 +6,7 @@
 #    By: tidminta <tidminta@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/09/13 00:09:25 by tidminta          #+#    #+#              #
-#    Updated: 2020/02/27 18:12:24 by tidminta         ###   ########.fr        #
+#    Updated: 2020/02/28 12:33:42 by tidminta         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -50,7 +50,7 @@ OBJ =	./lib/ft_memset.c\
 		./lib/ft_strmapi.c\
 		./lib/ft_toupper.c\
 		./lib/ft_tolower.c\
-		./lib/ft_printf.c
+		./lib/ft_check_format.c
 
 
 OBJ_OBJS	=	$(OBJ:.c=.o)
@@ -60,7 +60,7 @@ CFLAGS		=	-Wall -Wextra -Werror
 LIB			= libftprintf.h
 
 %.o : %.c
-	$(CC) $(CFLAGS) -I. -o $@ -c $< 
+	@$(CC) $(CFLAGS) -I. -o $@ -c $< 
 
 
 $(NAME): $(OBJ_OBJS) $(LIB) Makefile
