--- a/cub3D/Makefile
+++ b/cub3D/Makefile
@@ -6,7 +6,7 @@
 #    By: tidminta <tidminta@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/06/04 18:20:36 by tidminta          #+#    #+#              #
-#    Updated: 2020/10/12 18:35:45 by tidminta         ###   ########.fr        #
+#    Updated: 2020/10/13 16:07:10 by tidminta         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,7 @@ INCLUDE_PATH = ./includes/
 
 OBJ_PATH = ./objs/
 
-ASAN = -fsanitize=address -O3
+ASAN = -fsanitize=address -g -O3
 
 SRC_NAME =		main.c\
 				init.c\
@@ -67,7 +67,7 @@ FLAGS = -Wall -Werror -Wextra
 
 all: $(NAME)
 	@$(MAKE) -C libft
-	@gcc $(ASAN) $(FLAGS) $(MLX) $(NAME) ./libft/libft.a -o Cub3D 
+	@gcc $(FLAGS) $(MLX) $(NAME) ./libft/libft.a -o Cub3D 
 
 $(NAME): $(OBJ)
 	@ar rc $(NAME) $(OBJ)
