--- a/cub3D/Makefile
+++ b/cub3D/Makefile
@@ -6,7 +6,7 @@
 #    By: tidminta <tidminta@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/06/04 18:20:36 by tidminta          #+#    #+#              #
-#    Updated: 2020/10/21 18:05:49 by tidminta         ###   ########.fr        #
+#    Updated: 2020/10/26 18:41:15 by tidminta         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -40,6 +40,7 @@ SRC_NAME =		main.c\
 				sprite.c\
 				sprite2.c\
 				tools.c\
+				tools2.c\
 				free.c
 
 SRC_GNL_NAME = 	get_next_line.c\
@@ -68,7 +69,7 @@ FLAGS = -Wall -Werror -Wextra
 
 all: $(NAME)
 	@$(MAKE) -C libft
-	@gcc -g $(FLAGS) $(MLX) $(NAME) ./libft/libft.a -o Cub3D 
+	@gcc -g3 $(FLAGS) $(MLX) $(NAME) ./libft/libft.a -o Cub3D 
 
 $(NAME): $(OBJ)
 	@ar rc $(NAME) $(OBJ)
