--- a/Minishell/Makefile
+++ b/Minishell/Makefile
@@ -14,6 +14,8 @@ SRCS	=	./srcs/minishell.c \
 			./srcs/builtins/my_pwd.c \
 			./srcs/builtins/my_export.c \
 			./srcs/builtins/my_unset.c \
+			./srcs/builtins/my_cd.c \
+			./srcs/builtins/my_echo.c \
 			./srcs/check/data_check.c \
 			./srcs/cmd/exec_cmd.c \
 			./srcs/cmd/handler_cmd.c \
