--- a/Minishell/Makefile
+++ b/Minishell/Makefile
@@ -4,26 +4,30 @@ CC		=	gcc
 
 RM		=	rm -f
 
-CFLAGS	=	-g
+CFLAGS	=	-Wall -Wextra -Werror -g3 -fsanitize=address
 
-LFLAGS	=	-I. -lncurses
+LFLAGS	=	-I. -lncurses -lreadline
 
-LIBFT	=	./lib/libft/libft.a
+LIBFT	=	./libft/libft.a 
 
-SRCS	=	./srcs/main/main.c
-			./srcs/cmd/handle_cmd.c
-
+SRCS	=	./srcs/main/main.c \
+			./srcs/gc/garbage_co.c \
+			./srcs/cmd/handle_cmd.c \
+			./srcs/cmd/cmd_tools.c \
+			./srcs/lists/lists.c \
+			./srcs/error/error.c\
+			./srcs/env/env.c
 OBJS	=	$(SRCS:.c=.o)
 
 all:		$(NAME)
 
 $(NAME):	$(OBJS)
-			make -C lib/libft
+			make -C libft
 			${CC} ${CFLAGS} ${LFLAGS} -o ${NAME} ${OBJS} ${LIBFT}
 
 clean:
 			$(RM) $(OBJS)
-			make clean -C lib/libft
+			make clean -C libft
 
 fclean:		clean
 			$(RM) $(NAME) $(LIBFT)
