--- a/Philosophers/Makefile
+++ b/Philosophers/Makefile
@@ -6,7 +6,7 @@
 #    By: tidminta <tidminta@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/09/13 18:01:31 by tidminta          #+#    #+#              #
-#    Updated: 2021/09/14 17:55:39 by tidminta         ###   ########.fr        #
+#    Updated: 2021/09/15 02:11:21 by tidminta         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,11 +18,13 @@ RM		=	rm -f
 
 CFLAGS	=	-Wall -Wextra -Werror -g
 
-LFLAGS	=	-I. -fsanitize=address
+LFLAGS	=	-I. #-fsanitize=address
 
 LIBFT	=	./libft/libft.a
 
-SRCS	=	./srcs/philo.c
+SRCS	=	./srcs/main.c \
+			./srcs/init.c \
+			./srcs/tools.c 
 
 OBJS	=	$(SRCS:.c=.o)
 
@@ -30,7 +32,7 @@ all:	$(NAME)
 
 $(NAME):	$(OBJS)
 			make -C libft
-			¯${CC} ${CFLAGS} ${LFLAGS} -o ${NAME} ${OBJS} ${LIBFT}
+			${CC} ${CFLAGS} ${LFLAGS} -o ${NAME} ${OBJS} ${LIBFT}
 
 clean:
 		$(RM) $(OBJS)
