--- a/Philosophers/libft/Makefile
+++ b/Philosophers/libft/Makefile
@@ -3,52 +3,86 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: motoure <marvin@42.fr>                     +#+  +:+       +#+         #
+#    By: tidminta <tidminta@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2020/01/07 02:25:18 by motoure           #+#    #+#              #
-#    Updated: 2021/07/02 02:48:11 by motoure          ###   ########.fr        #
+#    Created: 2019/09/13 00:09:25 by tidminta          #+#    #+#              #
+#    Updated: 2020/01/16 21:12:59 by tidminta         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
 
-SRC = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c \
-	  ft_isdigit.c ft_isprint.c \
-	  ft_itoa.c ft_calloc.c\
-	  ft_memccpy.c ft_memchr.c ft_memcpy.c ft_memcmp.c\
-	  ft_memmove.c ft_memset.c ft_putchar_fd.c \
-	  ft_putendl_fd.c ft_putnbr_fd.c \
-	  ft_putstr_fd.c ft_split.c ft_strchr.c\
-	  ft_strdup.c ft_strrev.c\
-	  ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c \
-	  ft_strmapi.c ft_strncmp.c\
-	  ft_strnstr.c ft_strrchr.c \
-	  ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c \
-	  ft_putchar_str.c ft_memsub.c ft_realloc.c ft_strndup.c\
+CC  = gcc
 
-OBJ = $(subst .c,.o,$(SRC))
+RM	= rm -f
 
-CFLAGS = -Wall -Werror -Wextra
+OBJ =	./ft_memset.c\
+		./ft_bzero.c\
+		./ft_memcpy.c\
+		./ft_memccpy.c\
+		./ft_memchr.c\
+		./ft_memcmp.c\
+		./ft_memmove.c\
+		./ft_strlen.c\
+		./ft_isalpha.c\
+		./ft_isdigit.c\
+		./ft_isalnum.c\
+		./ft_strnstr.c\
+		./ft_strncmp.c\
+		./ft_strlcpy.c\
+		./ft_strlcat.c\
+		./ft_atoi.c\
+		./ft_strdup.c\
+		./ft_calloc.c\
+		./ft_substr.c\
+		./ft_strjoin.c\
+		./ft_strtrim.c\
+		./ft_split.c\
+		./ft_itoa.c\
+		./ft_putchar_fd.c\
+		./ft_putstr_fd.c\
+		./ft_putendl_fd.c\
+		./ft_putnbr_fd.c\
+		./ft_strchr.c\
+		./ft_strrchr.c\
+		./ft_isascii.c\
+		./ft_isprint.c\
+		./ft_strmapi.c\
+		./ft_toupper.c\
+		./ft_tolower.c\
+		./ft_lstsize.c\
+                ./ft_lstnew.c\
+                ./ft_lstmap.c\
+                ./ft_lstlast.c\
+                ./ft_lstiter.c\
+                ./ft_lstdelone.c\
+                ./ft_lstclear.c\
+                ./ft_lstadd_front.c\
+                ./ft_lstadd_back.c
+
+
+OBJ_OBJS	=	$(OBJ:.c=.o)
+
+CFLAGS		=	-Wall -Wextra -Werror 
+
+LIB			= libft.h
+
+%.o : %.c
+	@$(CC) $(CFLAGS) -I. -o $@ -c $< 
+
+
+$(NAME): $(OBJ_OBJS) $(LIB) Makefile
+			@ar rc $(NAME) $(OBJ_OBJS)
+			ranlib $(NAME)
 
 all: $(NAME)
 
-OBJ : $(subst .o,.c,$(SRC))
-	gcc -c $(CFLAGS) $(SRC)
-
-$(NAME): $(OBJ)
-	ar rc $(NAME) $(OBJ)
-	ranlib $(NAME)
-
-
 clean:
-	rm -f $(OBJ)
+	$(RM) $(OBJ_OBJS)
 
-fclean: clean
-	rm -f $(NAME)
+fclean:	clean
+	$(RM) $(NAME)
 
-re: fclean all
+re:	fclean all
 
-main : main.c libft.a
-	gcc -Wall -Wextra -Werror main.c libft.a
-
-.PHONY: clean fclean all re
+.PHONY:	clean fclean all re
