--- a/Minishell/pipex/libft/Makefile
+++ b/Minishell/pipex/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: tminta <marvin@42quebec.com>               +#+  +:+       +#+         #
+#    By: tidminta <tidminta@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2022/07/07 15:40:43 by tminta            #+#    #+#              #
-#    Updated: 2022/07/07 15:40:58 by tminta           ###   ########.fr        #
+#    Created: 2019/09/13 00:09:25 by tidminta          #+#    #+#              #
+#    Updated: 2020/01/16 21:12:59 by tidminta         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
